Changelog

RoninDojo v1.15.1 Change Log
- Bug fix: non existent _update_15 is no longer called during an upgrade
- Bug fix: non existent _update_19 is no longer called in a fresh install
- Activated Fulcrum Batch support (dojo internal)
- Updated Dojo to 1.18.1, which includes the following:
  - Updated several base images to debian:bullseye-slim
  - Updated Whirlpool's tor to 0.4.7.11
  - Tor updated to 0.4.7.11 and its OBFS4 to 0.0.14
  - Updated addrindexrs to 0.6.0
  - updated mariadb(tracker) to 10.7.1
  - A fix so that it doesn't matter if the newer or older docker compose CLI api is present
- Credits: dammkewl, PavelTheCoder, BTCxZelko, s2l1

RoninDojo v1.15.0 Change Log
- Fixed backup drive feature
- Fixed salvage for indexers and tor data
- Fixed bisq installation
- Fixed mempool.space
- added conf backup script in case an upgrade goes wrong
- debug script now also generates a link for the PnP installation procedure journal logs
- Dojo updated to upstream v1.17.0
- Bitcoind updated to 0.23.0
- Electrs updated to 0.9.9
- Tor updated to 0.4.7.8 and its OBFS4 to 0.0.13
- Whirlpool updated to 0.10.15 and its tor to 0.4.7.8
- Electrs is now a separately defined container, no longer reusing addrindexrs' container
- Added Fulcrum indexer option, version 1.7.0
- Credits: dammkewl, BTCxZelko, s2l1, PavelTheCoder, BrotherRabbit, KYC3, Numbers, OrangedMike

RoninDojo v1.14.4 Change Log
- Electrs version bump to 0.9.9

RoninDojo v1.14.3 Change Log
- Electrs version bump to 0.9.7
- Bug fixes in salvage procedure
- Bug fix in handling mounts in installation procedure
- Bug fix in handling filesystems in installation procedure
- Bug fixes regarding update migration scripts
- Refactored menu-whirlpool-wst.sh
- Bug fix in install cleanup
- Bug fix in indexer swap procedure
- Bug fix in ronin.network service

RoninDojo v1.14.2 Change Log
- Issue 114 - menu countdown during main menu exit
- Issue 132 - SSD Drop off after reboot