@@ -4,6 +4,7 @@ RoninDojo v1.15.1 Change Log
 - Bug fix: non existent _update_15 is no longer called during an upgrade
 - Bug fix: non existent _update_19 is no longer called in a fresh install
 - Activated Fulcrum Batch support (dojo internal)
+- Bug fix: specter uninstall migration now actually removes the specter installation
 - Updated Dojo to 1.18.1, which includes the following:
   - Updated several base images to debian:bullseye-slim
   - Updated Whirlpool's tor to 0.4.7.11
